checking the calculation against rpc table

--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -399,9 +399,9 @@
 
             if(data.abseq){
                 abseqList.push({
-                    shallowRPC: data.cellNumber * 500 * data.abseqplexity,
-                    moderateRPC: data.cellNumber * 1000 * data.abseqplexity,
-                    deepRPC: data.cellNumber * 1000 * 30,
+                    shallowRPC: data.cellNumber * 150 * data.abseqplexity,
+                    moderateRPC: data.cellNumber * 400 * data.abseqplexity,
+                    deepRPC: data.cellNumber * 1000 * data.abseqplexity,
                 });
             }
             console.log("AbSeq List:", abseqList);
