Edit row for AbSeq panel

--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -471,14 +471,14 @@
                 <td>${((totalShallowRPC/1000000) * 0.3 * 2).toFixed(1)}</td>
             </tr>
             <tr>
-                <td>Moderate</td>
+                <td>Moderate/OMICS-one (AbSeq)</td>
                 <td>${(totalModerateRPC/1000000)}</td>
                 <td>${((totalModerateRPC/1000000) * 0.1 * 2).toFixed(1)}</td>
                 <td>${((totalModerateRPC/1000000) * 0.15 * 2).toFixed(1)}</td>
                 <td>${((totalModerateRPC/1000000) * 0.3 *2 ).toFixed(1)}</td>
             </tr>
             <tr>
-                <td>Deep/OMICS-one (AbSeq)</td>
+                <td>Deep/Immune Response Panel (AbSeq)</td>
                 <td>${(totalDeepRPC/1000000)}</td>
                 <td>${((totalDeepRPC/1000000) * 0.1 * 2).toFixed(1)}</td>
                 <td>${((totalDeepRPC/1000000) * 0.15 * 2).toFixed(1)}</td>
