--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -167,7 +167,7 @@
 
 <body>
     <div class="message">
-        This is the latest version of the Simplified SeqCalculator (Feb 2025). Please delete the pre-release version and use this version for all future calculations.
+        This is the latest version of the Simplified SeqCalculator (April 2025). Please delete the pre-release version <span style="color:red;">(FEB 2025)</span> and use this version for all future calculations.
     </div>
     <header><h1>How Many Reads I Need?</h1></header>
     <main>
@@ -547,7 +547,7 @@ console.log(allRows);
     </script>
     <footer>
         <p>Developer: Syabira Yusoff (PhD) | Bioinformatics Support Engineer <br>
-        Release Feb 2025 | Version 1.0  <br>
+        Release April 2025 | Version 1.1  <br>
         <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a></p>
     </footer>
 </body>
