add Phix percentage to the total rpc

--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -322,7 +322,7 @@
 
         <div id="resultTable" class="section-container" style="display: none;">
             <h2>Output Table</h2>
-            <p>The values in the table will include Phix percentage to the total reads when PhiX value is provided.</p>
+            <p>The values in the table will include the PhiX percentage of the total reads when the PhiX value is provided.</p>
             <table  style="width:100%">
                 <thead>
                     <tr>
