change some fonts color

--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -120,7 +120,7 @@
         .input-container span{
             margin-top: 10px;
             font-size: 15px;
-            color: red;
+            color: #004593;
         }
         .input-container div{
             margin: 10px;
