--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -31,7 +31,7 @@
             <div class="content-area">
             <!-- Left sidebar: main Steps -->
              <nav class="sidebar-left"> 
-                <h4>Sections:</h4>
+                <h4>Chapters:</h4>
                 <a href="#" onclick="loadStep('step1')"><button class="mainPageButton">Pipeline Setup</button></a>
                 <a href="#" onclick="loadStep('step2')"><button class="mainPageButton">Files Upload</button></a>
                 <a href="#" onclick="loadStep('step3')"><button class="mainPageButton">Reference Files</button></a>
@@ -59,7 +59,13 @@
              <main id="content">
                 <h2> Welcome to the Quick Start Guide</h2>
                 <p>This guide is designed to help you get started with the BD Rhapsody&trade; Pipeline.</p>
-                <h3>What is the BD Rhapsody&trade; Pipeline?</h3>
+                
+                <center>
+                    <figure>
+                    <img src="./assets/images/pipeline_flow.gif" style="width:80%;">
+                    <figcaption></figcaption>
+                </figure>
+                </center>
                 <p>The BD Rhapsody&trade; Pipeline is a analysis workflow that processes raw sequencing data from the BD Rhapsody&trade; system to generate experimental overview as well as output files that generated to proceed with secondary analysis. It is designed to be user-friendly and accessible to all BD Rhapsody&trade; customers.</p>
                 <h3>What can the BD Rhapsody&trade; Pipeline do?</h3>
                 <p>The BD Rhapsody&trade; Pipeline can perform several key analyses, including:</p>
