--- a/PrimaryPipelineSetup/sections/step4_Run Locally.html
+++ b/PrimaryPipelineSetup/sections/step4_Run Locally.html
@@ -24,5 +24,5 @@ onclick="changeImage2('./assets/images/localSetup_wta_abseq_smk.png')">WTA+AbSeq
                 <button class="button" onclick="changeImage2('./assets/images/localSetup_atac_SMK.png')">ATAC+SMK</button>
         </div>
         <div class="scroll">
-            <img class="ref-img" id="defaultImage2" src="./assets/images/defaultImage_setupStep.png" width = "900">
+            <img class="ref-img" id="defaultImage2" src="../assets/images/localSetup_wta.png" width = "900">
             </div>
