--- a/PrimaryPipelineSetup/sections/step4_Run on Velsera.html
+++ b/PrimaryPipelineSetup/sections/step4_Run on Velsera.html
@@ -20,5 +20,5 @@ onclick="changeImage('./assets/images/SBsetup_WTA_AbSeq_SMK.png')">WTA+AbSeq+SMK
                 <button class="button" onclick="changeImage('./assets/images/SBsetup_WTA_ATAC.png')">WTA+ATAC</button>
         </div>
         <div class="scroll">
-            <img class="ref-img" id="defaultImage" src="./assets/images/defaultImage_setupStep.png">
+            <img class="ref-img" id="defaultImage" src="../assets/images/SBsetup_WTA.png" width = "900">
             </div>
