completed all sections

--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -20,13 +20,23 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="./assets/images/XpressFavicon.ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
+        
     </head>
 
     <body>
         <div class="container">
-            <header>
-                <h1>BDRhapsody&trade; Pipeline Quick Start Guide</h1>
+                <header class="banner-header">
+                    <div class="logo-section">
+                      <img src="./assets/images/plusOmics.png" alt="BD Rhapsody Logo" class="logo-img">
+                      <div class="header-text">
+                        <div class="subheading">YOUR QUICK START GUIDE</div>
+                        <h1>BD RHAPSODY&trade; PIPELINE</h1>
+                        </div>
+                    </div>
             </header>
+
 
             <div class="content-area">
             <!-- Left sidebar: main Steps -->
@@ -37,25 +47,9 @@
                 <a href="#" onclick="loadStep('step3')"><button class="mainPageButton">Reference Files</button></a>
                 <a href="#" onclick="loadStep('step4')"><button class="mainPageButton">Run the Pipeline</button></a>
                 <a href="#" onclick="loadStep('step5')"><button class="mainPageButton">Pipeline Output Files</button></a>
-                <a href="#" onclick="loadStep('step6')"><button class="mainPageButton">HTML Review</button></a>
-                <a href="#" onclick="loadStep('step7')"><button class="mainPageButton">Troubleshooting</button></a>
-
-                <h4>Contact Us Regionally: </h4>
-             <ul>
-                <li>EMEA: <a href="mailto:biox_support_EMEA@bd.com">biox_support_EMEA@bd.com</a>.</li>
-                <li>USA: </li>
-                <li>China: </li>
-                <li>Japan: </li>
-                <li>Others: </li>
-             </ul>
-
-
-             <h4>Our Team Members: </h4>
              </nav>
 
-             
-
-            <!-- Main content -->
+            <!-- Moddle Section: Main content -->
              <main id="content">
                 <h2> Welcome to the Quick Start Guide</h2>
                 <p>This guide is designed to help you get started with the BD Rhapsody&trade; Pipeline.</p>
