formatted headers and texts

--- a/PrimaryPipelineSetup/sections/step1_Docker_Based(LINUX).html
+++ b/PrimaryPipelineSetup/sections/step1_Docker_Based(LINUX).html
@@ -1,5 +1,20 @@
-<h1>Local Installation on LINUX</h1>
-<p class="notice">The Docker image features require root-level access to install. <br> For users operating on an institutional server, please collaborate with your system administrator to determine the directories and system resource allocation for the Docker image. <br> For those who do not have root access, you can skip the Docker installation process and use the "Docker-free" bundle. Please find the instructions on the available tab above.</p> 
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step1')">/ Pipeline Setup</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step1_Docker_Based(LINUX)')">LINUX</button>
+</nav>
+
+
+<h2>Local Installation on LINUX</h2>
+<div class="notice tree">
+    <ul>
+        <li>The docker image features require root-level access to install.</li>
+        <li>For users operating on an institutional server,  please collaborate with your system administrator to determine the directories, system resources allocation for Docker image.</li>
+        <li>For those who do not have root access, you can skip the docker installation process and use <button onclick="loadSection('step1_Pipeline_Bundle')">Docker-free" bundle</button>.</li>
+    </ul>
+</div> 
 <div class="card">
     <h2>Software requirements for local installation</h2>
     <ol>
