--- a/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
+++ b/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
@@ -1,4 +1,4 @@
-
+<h2>How to Upload your files on Velsera</h2>
 <h3>Click below to jump straight to the section:</h3>
 <ul>
     <li><b><a href="#computer">File upload from your computer:</a></b> Suitable for small size files, less than 5GB.</li>
@@ -21,20 +21,20 @@
 
 <ol>
     <li>On the project dashboard, click the <mark>Files.</mark> tab, and click <mark>+Add Files</mark><br>
-        <img src="./assets/images/step1_uploadFilefromCOmp.png">
+        <img class="steps-img" src="./assets/images/step1_uploadFilefromCOmp.png">
         </li>
     <li>Click on Add files and choose the source:<mark>Your Computer</mark><br>
-        <img src="./assets/images/step2_uploadFilefromCOmp.png"></li>
+        <img class="steps-img" src="./assets/images/step2_uploadFilefromCOmp.png"></li>
     <li>Select files that you intend to upload. You may select multiple files to upload.<br>
-        <img src="./assets/images/step3_uploadFilefromCOmp.png">
+        <img class="steps-img" src="./assets/images/step3_uploadFilefromCOmp.png">
     </li>
     <li>Click <mark>Upload</mark> button.<br>
-        <img src="./assets/images/step4_uploadFilefromCOmp.png"></li>
+        <img class="steps-img" src="./assets/images/step4_uploadFilefromCOmp.png"></li>
     <li>Monitor the upload progress. The upload speed depends on your internet connection and file size. Hover your mouse every 10 minutes to ensure you are not logged out from the webpage.<br>
-        <img src="./assets/images/step5_uploadFilefromCOmp.png">
+        <img class="steps-img" src="./assets/images/step5_uploadFilefromCOmp.png">
     </li>
     <li>Once the upload is complete, the files will appear in the Files tab.<br>
-        <img src="./assets/images/step6_uploadFilefromCOmp.png">
+        <img class="steps-img" src="./assets/images/step6_uploadFilefromCOmp.png">
         </li>
     </li>
 </ol>
@@ -81,14 +81,14 @@ Note:<br> <ul>
 <h3 id="integrityChecks">File Integrity Checks</h3>
 <p>It is recommended to check your file integrity before setting up your analysis on the Velsera platform. Files that are corrupted, such as FASTQ files, could cause the pipeline to fail. File corruption might occur at any stage of data transfer; internet connection and storage methods are possible causes of file corruption.</p>
 <ol>
-    <li>To run on files on Seven Bridges, you will need to create a Data Studio Analysis. Navigate to the <mark>Data Studio</mark> tab and click <mark>Create new analysis</mark> as shown below.</li><br>
-    <img src="./assets/images/integrityCheck_velsera_step1.png">
+    <li>To run on files on Seven Bridges, you will need to create a Data Studio Analysis. Navigate to the <mark>Data Studio</mark> tab and click <mark>Create new analysis</mark> as shown below.<br>
+    <img class="steps-img" src="./assets/images/integrityCheck_velsera_step1.png"></li>
     <li>Create a name <mark>Analysis name</mark> and select <mark>RStudio</mark> then  <mark>Start</mark> the analysis.<br>
-    <img src="./assets/images/integrityCheck_velsera_step2.png"></li>
+    <img class="steps-img" src="./assets/images/integrityCheck_velsera_step2.png"></li>
     <li>A new window will be iniCalized. This might take a few minutes. <br>
-    <img src="./assets/images/integrityCheck_velsera_step3.png"></li>
+    <img class="steps-img" src="./assets/images/integrityCheck_velsera_step3.png"></li>
     <li>RStudio terminal will start. Navigate to the terminal tab. <br>
-    <img src="./assets/images/integrityCheck_velsera_step4.png"></li>
+    <img class="steps-img" src="./assets/images/integrityCheck_velsera_step4.png"></li>
     <li>Type to change the directory to your project files on Seven Bridges:
         <p class="code">cd /sbgenomics/project-files</p>
     </li>
