--- a/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
+++ b/PrimaryPipelineSetup/sections/step3_AbSeq_Custom_Reference.html
@@ -6,15 +6,15 @@
 <ol>
     <li>Navigate to <a href="https://abseq-ref-gen.genomics.bd.com/">BD AbSeq Panel Reference Generator</a> </li>
     <li>If BD® OMICS-One Protein Panel(s) or BD® AbSeq Immune Discovery Panel is used in the experiment, click “<” on the left of the Panel (highlighted in the red box) to add to the “My Panel” column.<br>
-        <img src="./assets/images/AbSeqRef_step1.png" alt="Step 1"></li>
+        <img class="steps-img" src="./assets/images/AbSeqRef_step1.png" alt="Step 1"></li>
     <li>If other BD® AbSeq Antibody-Oligo(s) are used in the experiment, select the BD® AbSeq product(s) and click “>>” to add to the “My Panel” column.<br>
-        <img src="./assets/images/AbSeqRef_step2.png" alt="Step 2"></li>
+        <img class="steps-img" src="./assets/images/AbSeqRef_step2.png" alt="Step 2"></li>
     <li>After all antibody-oligo products are added to the “My Panel” column, fill in the “output file name” field with your preferred file name and click “Create New AbSeq Panel” to save the FASTA file to your computer.<br>
-        <img src="./assets/images/AbSeqRef_step3.png" alt="Step 3"></li>
+        <img class="steps-img" src="./assets/images/AbSeqRef_step3.png" alt="Step 3"></li>
 </ol>
 
 <h3>How does the output file look?</h3>
 <ul>
     <li>The format of the output file is in FASTA format. The image below shows a screenshot of the file. You may now proceed to use the file as AbSeq Reference input. <br>
-        <img src="./assets/images/AbSeq_fasta.png" alt="FASTA File"></li>
+        <img class="steps-img" src="./assets/images/AbSeq_fasta.png" alt="FASTA File"></li>
 </ul>
