--- a/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
@@ -1,7 +1,7 @@
 <div id="refCheckbox" class="section active">
+    <h2>Reference File Information</h2>
     <div class="checkbox-section">
-        <h2>Reference File Information</h2>
-                    <h4>Please check the box applicable to your experimental assay type(s).</h4>
+                    <h4>Please check the box that applies to your experimental assay type(s).</h4>
                     <label class="ref-container">WTA
                         <input type="checkbox" id="assay1" name="assay1" value="wta" onclick="showCheckboxInfo('assay1', 'wtatext')">
                         <span class="checkmark"></span></label><br>
@@ -71,7 +71,7 @@
                             <br><li><b>Example of fasta file for AbSeq:</b>
                             <ol type="I">
                                 <li>Fastq header Image <br>
-                                <img src="./assets/images/abseqRef_fasta.png"></li>
+                                <img class="steps-img" src="./assets/images/abseqRef_fasta.png"></li>
                                 <li>Detail on the FASTA header: <p class="notice">AntibodyName:clone|GeneSymbol|SeqID|pAbO</p></li>
                                 <ol type="i">
                                     <li><b>AntibodyName:clone</b>: The antibody and clone name in BD's catalog.</li>
