--- a/PrimaryPipelineSetup/sections/step5_Pipeline_Report_HTML.html
+++ b/PrimaryPipelineSetup/sections/step5_Pipeline_Report_HTML.html
@@ -454,6 +454,7 @@ Further reading on <a href="https://bd-rhapsody-bioinfo-docs.genomics.bd.com/ste
         </ul>
       </li>
     </ol>
+    Further reading on <a href="https://bd-rhapsody-bioinfo-docs.genomics.bd.com/steps/steps_sample_tag.html">Sample Tags Multiplexing algorithm</a>.
 <hr>
     <h3>VDJ</h3>
     <p>
@@ -479,7 +480,7 @@ Further reading on <a href="https://bd-rhapsody-bioinfo-docs.genomics.bd.com/ste
         </li></ul>
       </li>
     </ol>
-    Further reading on <a href="https://bd-rhapsody-bioinfo-docs.genomics.bd.com/steps/steps_tcr_bcr.html">VDJ Anlysis Algorithm</a>.
+    Further reading on <a href="https://bd-rhapsody-bioinfo-docs.genomics.bd.com/steps/steps_tcr_bcr.html">VDJ Analysis Algorithm</a>.
   </p>
 
 
