--- a/PrimaryPipelineSetup/steps/step5.html
+++ b/PrimaryPipelineSetup/steps/step5.html
@@ -21,7 +21,7 @@
     <summary class="folder"> General Ouput Files</summary>
     <dl>
         <!-- done-->
-        <dt class="subfolder"><button onclick="loadSection('step5_Metrics_Summary')"><i class="far fa-file-alt"></i> Metrics summary</summary></button><br><span>Report containing sequencing, molecules, and cell metrics.</span></dt>
+        <dt class="subfolder"><button onclick="loadSection('step5_Metrics_Summary')"><i class="far fa-file-alt"></i> Metrics summary</button><br><span>Report containing sequencing, molecules, and cell metrics.</span></dt>
         <!-- NOTdone-->
         <br><dt class="subfolder"><button onclick="loadSection('step5_Pipeline_Report_HTML')"><i class="far fa-file-alt"></i> Pipeline Report HTML</button><br><span>Summary report containing the results from the sequencing analysis pipeline run.</span></dt>
         <!-- TO add: Pictures of the 3 files-->
