--- a/PrimaryPipelineSetup/sections/step2_CLI_(MacOS).html
+++ b/PrimaryPipelineSetup/sections/step2_CLI_(MacOS).html
@@ -1,4 +1,4 @@
-<h1>Command Line Interface Upload (MacOS/LINUX)</h1>
+<h2>Command Line Interface Upload (MacOS/LINUX)</h2>
             <div class="notice">
                 There are TWO main steps to setup your file upload through Command Line Interface (CLI). 
                 <ul>
@@ -8,37 +8,37 @@
             </div>
             
             <div class="card" style="background-color: #f1f1f1;">
-                <h2>Generate API endpoint and Authentication Token on Velsera</h2>
+                <h3>Generate API endpoint and Authentication Token on Velsera</h3>
                 Below are the steps to generate API Endpoint and Authentication Token: <br>
                 <ol>
                     <li>Log in to your Seven Bridges account. Click <mark>Developer</mark> -> <mark>Authentication token</mark> -> <mark>Generate token</mark>.</li><br>
-                    <img src="./assets/images/autehnticationstep1.png"><br><br>
+                    <img class="steps-img" src="./assets/images/autehnticationstep1.png"><br><br>
                     <li>You will find the Token and API on the next page.Ensure to keep your Authentication Token secure and do not share it publicly.</li>
                     <li>You may now use these credentials while setting up your upload process to authenticate and interact with Seven Bridges through the API.</li>
                     <li>Picture below showing the API and Authentication Token:</li>
-                    <br><img src="./assets/images/authenticationTokenStep2.png"><br>
+                    <br><img class="steps-img" src="./assets/images/authenticationTokenStep2.png"><br>
                 </ol>
             </div>
             <div class="card">
-                <h2>Download and Configure CLI to your device</h2>
+                <h3>Download and Configure CLI to your device</h3>
                 <ol>
                     <li>To automatically download the SB command line interface, type or paste the command below:
                         <p class="code">bash -c 'curl https://igor.sbgenomics.com/downloads/sb/install.sh -sSf | sudo -H sh'</p> </li>
                     <li>You may be prompted to input your device password then press <mark>enter</mark>.</li>
                     <li> If the tool is successfully installed, the below message will be printed out.<br>
-                    <img src="./assets/images/CLI_successfull.png"></li>
+                    <img class="steps-img" src="./assets/images/CLI_successfull.png"></li>
                     <p><b>CLI Configuration</b></p>
                     <li>To authenticate your credential with the SB platform, launch the shell promt/terminal and enter:<br>
                     <p class="code">sb configure</p></li>
                     <li>The prompt will ask for the API endpoint and authentication token. Enter accordingly.</li>
                     <li>Enter the command below and it should display the output:<br>
                         <p class="code">sb</p>
-                    <img src="./assets/images/sbCommandOutput.png"></li>
+                    <img class="steps-img" src="./assets/images/sbCommandOutput.png"></li>
                 </ol>
             </div>
 
            <div class="card">
-                <h2>File Integrity Checks</h2>
+                <h3>File Integrity Checks</h3>
                 <p>It is recommended to check your file integrity before upload to Velsera platform. Files that are corrupted, as an example FASTQ files would caused the pipeline failure.</p>
                     <ol>
                         <li>Navigate to the folder contain your project files using command line or terminal.</li>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="card" style="background-color: #f1f1f1;">
-                <h2>File Upload</h2>
+                <h3>File Upload</h3>
                 <ol>
                     <li>Suppose the files are located in the Download folder. Copy and paste the following command to navigate to the Download folder:<br><p class="code">cd ~/Download</p></li>
                     <li>To upload the files, enter command below:
@@ -75,7 +75,7 @@
             </div>
 
             <div class="card">
-                <h2>CLI Configuration and File Upload</h2>
+                <h3>CLI Configuration and File Upload</h3>
                 <div class="video-container" >
                     <video style="width: 500px;" controls poster = "./assets/videos/sbConfigure_FileUpload.png">
                     <source src="./assets/videos/sbConfigure_FileUpload.mov" type="video/mp4"></video></div>
